--- a/mediapipe/examples/android/src/java/com/google/mediapipe/libs/objectdetection/BUILD
+++ b/mediapipe/examples/android/src/java/com/google/mediapipe/libs/objectdetection/BUILD
@@ -6,6 +6,7 @@ mediapipe_aar(
     calculators = ["//mediapipe/graphs/object_detection:mobile_calculators"],
     assets = [
         "//mediapipe/graphs/object_detection:mobile_gpu.binarypb",
+        "//mediapipe/graphs/object_detection:mobile_cpu.binarypb",
         "//mediapipe/models:ssdlite_object_detection.tflite",
         "//mediapipe/models:ssdlite_object_detection_labelmap.txt",
     ],
